--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(OpenGL_program
     Modeling/Mesh.cpp
     World/Scene.cpp
     World/Camera.cpp
+    World/Light.cpp
     Modeling/RenderableObject.cpp
     Modeling/Cube.cpp
 )
