first DataBuffers refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ add_executable(OpenGL_program
     World/Scene.cpp
     World/Camera.cpp
     World/Light.cpp
+    Modeling/DataBuffers/TextureBuffer.cpp
+    Modeling/DataBuffers/VertexBuffer.cpp
     Modeling/RenderableObject.cpp
     Modeling/Cube.cpp
 )
