--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(OpenGL_program)
 IF(WIN32)
     set(CMAKE_CXX_FLAGS  "-O2")
 ELSE()
-    set(CMAKE_CXX_FLAGS  "-g -O2 --std=c++0x -Wall")
+    set(CMAKE_CXX_FLAGS  "-g -O2 --std=c++0x")
 ENDIF()
 
 include_directories(. parsers glm)
