--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ include_directories(. parsers glm)
 #link_directories()
 
 add_executable(OpenGL_program
+    Application.cpp
     main.cpp
     Modeling/DataBuffers/TextureBuffer.cpp
     Modeling/DataBuffers/VertexBuffer.cpp
